--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 # Core data processing
-numpy>=1.21.0
-pandas>=1.3.0
+numpy==2.3.4.0
+pandas==2.3.3
+python-dateutil==2.9.0.post0
+pytz==2022.7
+six==1.17.0
+tzdata==2025.2
 
 # Data visualization
 matplotlib>=3.4.0
