--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,56 +7,44 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest  # Run on GitHub-hosted Ubuntu runner
-    
+
     steps:
     # Step 1: Checkout the repository code
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Fetch all history for proper versioning
+        fetch-depth: 0  # Fetch full history
 
-    # Step 2: Set up Python environment
+    # Step 2: Set up Python
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'  # Use Python 3.11
-        cache: 'pip'  # Cache pip packages for faster builds
+        python-version: '3.11'
+        cache: 'pip'
 
-    # Step 3: Install project dependencies
+    # Step 3: Install dependencies
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip  # Upgrade pip first
-        pip install -r requirements.txt  # Install project dependencies
-        pip install pytest-cov  # Install test coverage tool
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     # Step 4: Run tests with coverage
     - name: Run tests with coverage
       run: |
-        # Run pytest with coverage
-        # --cov=src: Measure coverage for src/ directory
-        # --cov-report=xml: Generate XML report for Codecov
-        # --cov-fail-under=0: Don't fail if coverage is below threshold
-        pytest tests/ --cov=src --cov-report=xml --cov-fail-under=0
-        
-        # Display coverage report in logs
+        pytest tests/ --cov=src --cov-report=xml --cov-fail-under=0 -v
         coverage report
 
     # Step 5: Run code quality checks
     - name: Lint with flake8
       run: |
-        pip install flake8  # Install linter if not already installed
-        
-        # Run flake8 with basic error checking
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        
-        # Run flake8 with complexity and style checks
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
 
     # Step 6: Upload coverage to Codecov (optional)
     - name: Upload coverage to Codecov
-      if: success()  # Only run if previous steps succeeded
+      if: success()
       uses: codecov/codecov-action@v3
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}  # Token from repository secrets
-        file: ./coverage.xml  # Coverage report file
-        fail_ci_if_error: false 
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
+        fail_ci_if_error: false
